updated server hosts

--- a/client/package.json
+++ b/client/package.json
@@ -51,5 +51,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://eco-saver-mart.onrender.com"
+  "proxy": "http://localhost:10000"
 }
